[gd_scene load_steps=3 format=2]

[ext_resource path="res://Common/Behaviors/AutoAim.gd" type="Script" id=1]
[ext_resource path="res://Common/Behaviors/Vision.gd" type="Script" id=2]

[node name="AutoAim" type="Node2D"]
script = ExtResource( 1 )

[node name="Vision" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 1280, 0 )
collision_mask = 48
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="Vision"]

[connection signal="target_found" from="Vision" to="." method="_on_Vision_target_found"]
[connection signal="target_lost" from="Vision" to="." method="_on_Vision_target_lost"]
